# website

./: .funcignore  .gitignore  Cargo.toml  README.md  host.json  proxies.json
build-scripts/: clean-workspace.sh  deploy.sh  local-start.sh  prepare-workspace.sh
functions/: functions.txt
functions/all/: function.json
functions/apply/: function.json
functions/collaborations/: function.json
functions/featured/: function.json
functions/home/: function.json
functions/members/: function.json
src/: filters.rs  handlers.rs  main.rs
src/content/: mod.rs  render.rs
src/content/helpers/: format_helpers.rs  mod.rs  utils.rs
src/content/pages/: apply.rs  featured.rs  index.rs  members.rs  mod.rs
static/assets/js/: render-instagram-grid.js
static/assets/page-content/: all-content.hbs  apply-content.hbs  featured-content.hbs  index-content.hbs  members-content.hbs
static/assets/templates/: page-links.hbs  page-template.hbs  social-links.hbs
